--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MarsCitizens.Views.MainPage">
+             x:Class="MarsCitizens.Views.MainPage"
+             BindingContext="{Binding MainViewModel, Source={StaticResource Locator}}">
       <Label Text="{Binding CitizienCount}" VerticalOptions="Center" HorizontalOptions="Center" />
 
   <StackLayout IsVisible="{Binding IsBusy}"
