--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -3,13 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MarsCitizens.Views.MainPage"
              BindingContext="{Binding MainViewModel, Source={StaticResource Locator}}">
-      <Label Text="{Binding CitizienCount}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+    <Label
+      Text="{Binding CitizenCount}"
+      FontSize="120"
+      AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
+      AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
-  <StackLayout IsVisible="{Binding IsBusy}"
-               Padding="32"
-               AbsoluteLayout.LayoutFlags="PositionProportional"
-               AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
-               BackgroundColor="#90000000">
-    <ActivityIndicator IsRunning="{Binding IsBusy}" Color="#3CB9A8"/>   
-  </StackLayout>
+    <AbsoluteLayout IsVisible="{Binding IsBusy}"
+                 Padding="32"
+                 AbsoluteLayout.LayoutFlags="All"
+                 AbsoluteLayout.LayoutBounds="0,0,1,1"
+                 BackgroundColor="#90000000">
+      <ActivityIndicator
+        IsRunning="{Binding IsBusy}"
+        Color="#FFFFFF"
+        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
+        AbsoluteLayout.LayoutFlags="PositionProportional" />
+    </AbsoluteLayout>
+  </AbsoluteLayout>
 </ContentPage>
