--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -2,18 +2,31 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MarsCitizens.Views.MainPage"
+             BackgroundColor="Black"
              BindingContext="{Binding MainViewModel, Source={StaticResource Locator}}">
-  <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-    <Label
-      Text="{Binding CitizenCount}"
-      FontSize="120"
-      AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
-      AbsoluteLayout.LayoutFlags="PositionProportional"/>
+  <RelativeLayout>
+    <Image Source="mars_planet.png" Opacity="0.6"
+                RelativeLayout.WidthConstraint=
+                  "{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                RelativeLayout.HeightConstraint=
+                  "{ConstraintExpression Type=RelativeToParent, Property=Height}"/>
+    <Grid RelativeLayout.WidthConstraint=
+              "{ConstraintExpression Type=RelativeToParent, Property=Width}"
+            RelativeLayout.HeightConstraint=
+              "{ConstraintExpression Type=RelativeToParent, Property=Height}">
 
+      <Label  Text="{Binding CitizenCount}"
+              VerticalOptions="Center"
+              HorizontalOptions="Center"
+              FontSize="120"
+              TextColor="White"/>
+    </Grid>
     <AbsoluteLayout IsVisible="{Binding IsBusy}"
                  Padding="32"
-                 AbsoluteLayout.LayoutFlags="All"
-                 AbsoluteLayout.LayoutBounds="0,0,1,1"
+                 RelativeLayout.WidthConstraint=
+                    "{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                 RelativeLayout.HeightConstraint=
+                    "{ConstraintExpression Type=RelativeToParent, Property=Height}"
                  BackgroundColor="#90000000">
       <ActivityIndicator
         IsRunning="{Binding IsBusy}"
@@ -21,5 +34,5 @@
         AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
         AbsoluteLayout.LayoutFlags="PositionProportional" />
     </AbsoluteLayout>
-  </AbsoluteLayout>
+  </RelativeLayout>
 </ContentPage>
