--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:a="clr-namespace:MarsCitizens.Extensions;assembly=MarsCitizens"
+             xmlns:abstractions="clr-namespace:RoundedBoxView.Forms.Plugin.Abstractions;assembly=RoundedBoxView.Forms.Plugin.Abstractions"
              x:Class="MarsCitizens.Views.MainPage"
              BackgroundColor="Black"
              BindingContext="{Binding MainViewModel, Source={StaticResource Locator}}">
@@ -14,20 +15,29 @@
                Aspect ="Fill"/>
       </a:AspectRatioContainer>
     </StackLayout>
+
     <Label Text="{Binding CitizenCount}"
-           FontSize="120"
-           TextColor="White"
-           AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
-           AbsoluteLayout.LayoutFlags="PositionProportional"/>
+             FontSize="120"
+             TextColor="White"
+             AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
+             AbsoluteLayout.LayoutFlags="PositionProportional"/>
+    <abstractions:RoundedBoxView
+      BackgroundColor="#40575757"
+      HeightRequest="200"
+      WidthRequest="200"
+      CornerRadius="150"
+      AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
+      AbsoluteLayout.LayoutFlags="PositionProportional"/>
+    
     <AbsoluteLayout IsVisible="{Binding IsBusy}"
-                     Padding="32"
+                    Padding="32"
                     AbsoluteLayout.LayoutFlags="All"
                     AbsoluteLayout.LayoutBounds="0,0,1,1"
                     BackgroundColor="#90000000">
       <ActivityIndicator
         IsRunning="{Binding IsBusy}"
         Color="#FFFFFF"
-        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
+        AbsoluteLayout.LayoutBounds="0.5,0.34,-1,-1"
         AbsoluteLayout.LayoutFlags="PositionProportional" />
     </AbsoluteLayout>
   </AbsoluteLayout>
