--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -6,39 +6,40 @@
              x:Class="MarsCitizens.Views.MainPage"
              BackgroundColor="Black"
              BindingContext="{Binding MainViewModel, Source={StaticResource Locator}}">
-  <AbsoluteLayout>
-    <StackLayout AbsoluteLayout.LayoutBounds="0,1,-1,-1"
-        AbsoluteLayout.LayoutFlags="PositionProportional">
-      <a:AspectRatioContainer AspectRatio="0.75" VerticalOptions="End">
-        <Image Source="mars_planet.png"
-               Opacity="0.4"
-               Aspect ="Fill"/>
-      </a:AspectRatioContainer>
-    </StackLayout>
+  <ContentView x:Name="_contentView">
+    <AbsoluteLayout>
+      <StackLayout AbsoluteLayout.LayoutBounds="0,1,-1,-1"
+          AbsoluteLayout.LayoutFlags="PositionProportional">
+        <a:AspectRatioContainer AspectRatio="0.75" VerticalOptions="End">
+          <Image Source="mars_planet.png"
+                 Opacity="0.4"
+                 Aspect ="Fill"/>
+        </a:AspectRatioContainer>
+      </StackLayout>
+      <Label Text="{Binding CitizenCount}"
+               FontSize="120"
+               TextColor="White"
+               AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
+               AbsoluteLayout.LayoutFlags="PositionProportional"/>
+      <abstractions:RoundedBoxView
+        BackgroundColor="#40575757"
+        HeightRequest="200"
+        WidthRequest="200"
+        CornerRadius="150"
+        AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
+        AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
-    <Label Text="{Binding CitizenCount}"
-             FontSize="120"
-             TextColor="White"
-             AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
-             AbsoluteLayout.LayoutFlags="PositionProportional"/>
-    <abstractions:RoundedBoxView
-      BackgroundColor="#40575757"
-      HeightRequest="200"
-      WidthRequest="200"
-      CornerRadius="150"
-      AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
-      AbsoluteLayout.LayoutFlags="PositionProportional"/>
-    
-    <AbsoluteLayout IsVisible="{Binding IsBusy}"
-                    Padding="32"
-                    AbsoluteLayout.LayoutFlags="All"
-                    AbsoluteLayout.LayoutBounds="0,0,1,1"
-                    BackgroundColor="#90000000">
-      <ActivityIndicator
-        IsRunning="{Binding IsBusy}"
-        Color="#FFFFFF"
-        AbsoluteLayout.LayoutBounds="0.5,0.34,-1,-1"
-        AbsoluteLayout.LayoutFlags="PositionProportional" />
+      <AbsoluteLayout IsVisible="{Binding IsBusy}"
+                      Padding="32"
+                      AbsoluteLayout.LayoutFlags="All"
+                      AbsoluteLayout.LayoutBounds="0,0,1,1"
+                      BackgroundColor="#90000000">
+        <ActivityIndicator
+          IsRunning="{Binding IsBusy}"
+          Color="#FFFFFF"
+          AbsoluteLayout.LayoutBounds="0.5,0.34,-1,-1"
+          AbsoluteLayout.LayoutFlags="PositionProportional" />
+      </AbsoluteLayout>
     </AbsoluteLayout>
-  </AbsoluteLayout>
+  </ContentView>
 </ContentPage>
