--- a/MarsCitizens/MarsCitizens/Views/MainPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/MainPage.xaml
@@ -16,6 +16,15 @@
                  Aspect ="Fill"/>
         </a:AspectRatioContainer>
       </StackLayout>
+
+      <abstractions:RoundedBoxView
+        BackgroundColor="#40575757"
+        HeightRequest="80"
+        WidthRequest="80"
+        CornerRadius="80"
+        AbsoluteLayout.LayoutBounds="0.9,0.1,-1,-1"
+        AbsoluteLayout.LayoutFlags="PositionProportional"/>      
+      
       <Label Text="{Binding CitizenCount}"
                FontSize="120"
                TextColor="White"
@@ -27,6 +36,14 @@
         WidthRequest="200"
         CornerRadius="150"
         AbsoluteLayout.LayoutBounds="0.5,0.3,-1,-1"
+        AbsoluteLayout.LayoutFlags="PositionProportional"/>
+
+      <abstractions:RoundedBoxView
+        BackgroundColor="#40575757"
+        HeightRequest="80"
+        WidthRequest="80"
+        CornerRadius="80"
+        AbsoluteLayout.LayoutBounds="0.1,0.6,-1,-1"
         AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
       <AbsoluteLayout IsVisible="{Binding IsBusy}"
