Add photos list page.

--- a/MarsCitizens/MarsCitizens/Views/CitizenDetailPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/CitizenDetailPage.xaml
@@ -136,7 +136,9 @@
                VerticalOptions="Center"/>
       </Grid>
 
-      <Button Text="PHOTOS"
+      <Button x:Name="_photos" 
+         IsVisible="{Binding HasPhotos}"
+         Text="PHOTOS"
          BackgroundColor="#d32f2f"
          TextColor="White"
          HorizontalOptions="FillAndExpand"
