--- a/MarsCitizens/MarsCitizens/Views/CitizensPage.xaml
+++ b/MarsCitizens/MarsCitizens/Views/CitizensPage.xaml
@@ -1,50 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vc="clr-namespace:MarsCitizens.Converters"
              x:Class="MarsCitizens.Views.CitiziensPage"
              BackgroundColor="White"
              BindingContext="{Binding CitizensViewModel, Source={StaticResource Locator}}">
-  <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-    <ListView ItemsSource="{Binding Citizens}"
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <vc:CitizenImageConverter x:Key="citizenImageConveter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+        <ListView ItemsSource="{Binding Citizens}"
                 RowHeight="65"
                 x:Name="_citizensListView"
                 AbsoluteLayout.LayoutFlags="All"
                 AbsoluteLayout.LayoutBounds="0,0,1,1">
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <Grid Padding="2" Margin="2">
-              <Grid.RowDefinitions>
-                <RowDefinition Height="25"></RowDefinition>
-                <RowDefinition Height="25"></RowDefinition>
-              </Grid.RowDefinitions>
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="60"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-              </Grid.ColumnDefinitions>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid Padding="2" Margin="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25"></RowDefinition>
+                                <RowDefinition Height="25"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="60"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
 
-              <Image  Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Aspect="AspectFill">
-                <Image.Source>
-                  <UriImageSource Uri="{Binding Thumbnail}" CachingEnabled="True" CacheValidity="5"/>
-                </Image.Source>
-              </Image>
-              <Label Grid.Row="0" Grid.Column="1" Text="{Binding Name}" TextColor="Black" Font="Large" LineBreakMode="TailTruncation"></Label>
-              <Label Grid.Row="1" Grid.Column="1" Text="{Binding FormattedDescription}" TextColor="Gray" LineBreakMode="TailTruncation"></Label>
-            </Grid>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-    <AbsoluteLayout IsVisible="{Binding IsBusy}"
+                            <Image  Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Aspect="AspectFill" Source = "{Binding Thumbnail, Converter={StaticResource citizenImageConveter}}" />
+
+                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Name}" TextColor="Black" Font="Large" LineBreakMode="TailTruncation"></Label>
+                            <Label Grid.Row="1" Grid.Column="1" Text="{Binding FormattedDescription}" TextColor="Gray" LineBreakMode="TailTruncation"></Label>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <AbsoluteLayout IsVisible="{Binding IsBusy}"
                       Padding="32"
                       AbsoluteLayout.LayoutFlags="All"
                       AbsoluteLayout.LayoutBounds="0,0,1,1"
                       BackgroundColor="#90000000">
-      <ActivityIndicator
+            <ActivityIndicator
         IsRunning="{Binding IsBusy}"
         Color="#FFFFFF"
         AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
         AbsoluteLayout.LayoutFlags="PositionProportional" />
+        </AbsoluteLayout>
     </AbsoluteLayout>
-  </AbsoluteLayout>
 </ContentPage>
